[gd_scene load_steps=13 format=3 uid="uid://cbwxewdan4gax"]

[ext_resource type="Texture2D" uid="uid://bpg0ulyec1jwl" path="res://addons/Tiny Swords (Update 010)/UI/Ribbons/Ribbon_Red_3Slides.png" id="1_ippf7"]
[ext_resource type="Script" path="res://GUI/gameOverUI.gd" id="1_rkacr"]
[ext_resource type="Texture2D" uid="uid://qabu8kr3p4pn" path="res://addons/Tiny Swords (Update 010)/UI/Banners/Banner_Vertical.png" id="2_s8u3d"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_70c2n"]
texture = ExtResource("1_ippf7")
texture_margin_left = 64.0
texture_margin_right = 64.0
axis_stretch_horizontal = 2
region_rect = Rect2(0, 0, 192, 64)

[sub_resource type="SystemFont" id="SystemFont_2lu3t"]
font_names = PackedStringArray("BERNIER™ SHADE")

[sub_resource type="LabelSettings" id="LabelSettings_vhlax"]
font = SubResource("SystemFont_2lu3t")
font_size = 55
font_color = Color(0.18, 0.018, 0.018, 0.952941)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xkf8x"]
texture = ExtResource("2_s8u3d")
texture_margin_left = 32.0
texture_margin_top = 28.0
texture_margin_right = 32.0
texture_margin_bottom = 44.0
axis_stretch_horizontal = 2
region_rect = Rect2(32, 28, 128, 136)

[sub_resource type="SystemFont" id="SystemFont_88wtk"]
font_names = PackedStringArray("BERNIER™ SHADE")

[sub_resource type="LabelSettings" id="LabelSettings_dqv5v"]
font = SubResource("SystemFont_88wtk")
font_size = 32
font_color = Color(0.15, 0.15, 0.15, 1)

[sub_resource type="Animation" id="Animation_nd6i2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.188235, 0.188235, 0.188235, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(399.5, 44)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(376.5, 414)]
}

[sub_resource type="Animation" id="Animation_r0r03"]
resource_name = "default"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.277393, 1),
"update": 0,
"values": [Color(0.188235, 0.188235, 0.188235, 0), Color(0.188235, 0.188235, 0.188235, 0.705882)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(399.5, -104), Vector2(399.5, 44)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7, 2),
"transitions": PackedFloat32Array(0.420448, 0.120742),
"update": 0,
"values": [Vector2(376.5, 631), Vector2(376.5, 414)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2yk2c"]
_data = {
"RESET": SubResource("Animation_nd6i2"),
"default": SubResource("Animation_r0r03")
}

[node name="GameOverUI" type="CanvasLayer"]
script = ExtResource("1_rkacr")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.188235, 0.188235, 0.188235, 0)

[node name="TopPanel" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 399.5
offset_top = 44.0
offset_right = 752.5
offset_bottom = 128.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_70c2n")

[node name="GameOverLabel" type="Label" parent="TopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -22.5
offset_right = 46.0
offset_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_vhlax")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomPanel" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 376.5
offset_top = 414.0
offset_right = 775.5
offset_bottom = 573.997
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_xkf8x")

[node name="CenterContainer" type="CenterContainer" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -50.0
offset_right = 165.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="BottomPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 20
columns = 2

[node name="Label" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Time Survived: "
label_settings = SubResource("LabelSettings_dqv5v")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "14:54"
label_settings = SubResource("LabelSettings_dqv5v")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Monsters defeated: "
label_settings = SubResource("LabelSettings_dqv5v")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MonstersLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1234"
label_settings = SubResource("LabelSettings_dqv5v")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationTree" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2yk2c")
}
autoplay = "default"
